add: eslint & prettier & husky

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,3 +1,6 @@
 {
-  "extends": "next/core-web-vitals"
+  "extends": ["next/core-web-vitals", "airbnb-base", "prettier"],
+  "parserOptions": {
+    "project": "./tsconfig.json"
+  }
 }
