--- a/package.json
+++ b/package.json
@@ -6,9 +6,14 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "eslint . --ext .js,.ts,.jsx,.tsx",
+    "lint:fix": "eslint . --ext .js,.ts,.jsx,.tsx --fix",
+    "format": "prettier --check --ignore-path .gitignore .",
+    "format:fix": "prettier --write --ignore-path .gitignore .",
+    "prepare": "husky install"
   },
   "dependencies": {
+    "husky": "^8.0.1",
     "next": "^12.1.4",
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
@@ -18,7 +23,10 @@
     "@types/react": "^17.0.39",
     "@types/react-dom": "18.0.8",
     "eslint": "8.26.0",
+    "eslint-config-airbnb-base": "^15.0.0",
     "eslint-config-next": "13.0.0",
+    "eslint-config-prettier": "^8.5.0",
+    "prettier": "^2.7.1",
     "typescript": "4.8.4"
   }
 }
