--- a/package.json
+++ b/package.json
@@ -10,15 +10,18 @@
     "lint:fix": "eslint . --ext .js,.ts,.jsx,.tsx --fix",
     "format": "prettier --check --ignore-path .gitignore .",
     "format:fix": "prettier --write --ignore-path .gitignore .",
-    "prepare": "husky install"
+    "prepare": "husky install",
+    "test": "jest --watch"
   },
   "dependencies": {
+    "@testing-library/react": "^12.1.4",
     "husky": "^8.0.1",
     "next": "^12.1.4",
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^5.16.5",
     "@types/node": "18.11.7",
     "@types/react": "^17.0.39",
     "@types/react-dom": "18.0.8",
@@ -26,6 +29,8 @@
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-config-next": "13.0.0",
     "eslint-config-prettier": "^8.5.0",
+    "jest": "^29.2.2",
+    "jest-environment-jsdom": "^29.2.2",
     "prettier": "^2.7.1",
     "typescript": "4.8.4"
   }
