add: ci checks for PRs

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,7 +3,8 @@ name: Lint and Prettier
 on:
   push:
     branches: [main]
-
+  pull_request:
+    branches: [main]
 jobs:
   lint-prettier-test:
     name: Apply lint and prettier
