add: firebase setup

--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   },
   "dependencies": {
     "@testing-library/react": "^12.1.4",
+    "firebase": "^9.13.0",
     "husky": "^8.0.1",
     "next": "^12.1.4",
     "react": "^17.0.2",
