--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,6 +1,9 @@
 {
-  "extends": ["next/core-web-vitals", "airbnb-base", "prettier"],
-  "parserOptions": {
-    "project": "./tsconfig.json"
-  }
+    "extends": ["next/core-web-vitals", "airbnb-base", "prettier"],
+    "parserOptions": {
+        "project": "./tsconfig.json"
+    },
+    "rules": {
+        "import/extensions": "off"
+    }
 }
