abstracted DayForm Component

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,6 +18,10 @@ jobs:
                   node-version: '16'
             - name: Install dependencies
               run: npm ci
+            - name: Build
+              run: npm run build
+            - name: bundle
+              run: npm run export
             - name: Prettier
               run: npm run format
             - name: Lint
