--- a/package.json
+++ b/package.json
@@ -12,10 +12,9 @@
         "format": "prettier --check --ignore-path .gitignore .",
         "format:fix": "prettier --write --ignore-path .gitignore .",
         "prepare": "husky install",
-        "test": "jest --watch"
+        "test": "jest - config ./config/jest.config.js"
     },
     "dependencies": {
-        "@testing-library/react": "^12.1.4",
         "axios": "^1.1.3",
         "firebase": "^9.13.0",
         "husky": "^8.0.1",
@@ -24,17 +23,25 @@
         "react-dom": "^17.0.2"
     },
     "devDependencies": {
+        "@babel/preset-env": "^7.20.2",
+        "@babel/preset-react": "^7.18.6",
+        "@babel/preset-typescript": "^7.18.6",
         "@testing-library/jest-dom": "^5.16.5",
+        "@testing-library/react": "^12.1.4",
         "@types/node": "18.11.7",
         "@types/react": "^17.0.39",
         "@types/react-dom": "18.0.8",
+        "@types/react-test-renderer": "^18.0.0",
+        "babel-jest": "^29.3.1",
         "eslint": "8.26.0",
         "eslint-config-airbnb-base": "^15.0.0",
         "eslint-config-next": "13.0.0",
         "eslint-config-prettier": "^8.5.0",
-        "jest": "^29.2.2",
+        "jest": "^29.3.1",
+        "jest-css-modules": "^2.1.0",
         "jest-environment-jsdom": "^29.2.2",
         "prettier": "^2.7.1",
+        "react-test-renderer": "^17.0.2",
         "typescript": "4.8.4"
     }
 }
