--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,8 +13,15 @@
         "resolveJsonModule": true,
         "isolatedModules": true,
         "jsx": "preserve",
-        "incremental": true
+        "incremental": true,
+        "types": ["cypress", "node"]
     },
-    "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx"],
+    "include": [
+        "next-env.d.ts",
+        "**/*.ts",
+        "**/*.tsx",
+        "cypress/**/*.ts",
+        "cypress/**/*.tsx"
+    ],
     "exclude": ["node_modules", ".next"]
 }
