--- a/.gitignore
+++ b/.gitignore
@@ -33,3 +33,11 @@ yarn-error.log*
 
 # typescript
 *.tsbuildinfo
+dist
+server.ts
+RootCA.key
+RootCA.crt
+# Local Netlify folder
+.netlify
+.swc
+firebase-debug.log
