--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
         "dev": "next dev",
         "build": "next build",
         "export": "next export",
-        "start": "next start",
+        "start": "node dist/server.js",
         "lint": "eslint . --ext .js,.ts,.jsx,.tsx",
         "lint:fix": "eslint . --ext .js,.ts,.jsx,.tsx --fix",
         "format": "prettier --check --ignore-path .gitignore .",
