--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
         "firebase": "^9.13.0",
         "husky": "^8.0.1",
         "next": "^12.1.4",
+        "next-optimized-images": "^2.6.2",
         "react": "^17.0.2",
         "react-dom": "^17.0.2"
     },
